--- a/package.json
+++ b/package.json
@@ -12,14 +12,23 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@next/font": "^14.2.15",
+    "@phosphor-icons/react": "^2.1.7",
+    "@radix-ui/react-slot": "^1.1.2",
     "@stripe/stripe-js": "^5.6.0",
     "@tanstack/react-query": "^5.66.9",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "google": "^2.1.0",
+    "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "stripe": "^17.6.0",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
