--- a/package.json
+++ b/package.json
@@ -30,9 +30,14 @@
     "google": "^2.1.0",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-virtualized-auto-sizer": "^1.0.25",
+    "react-window": "^1.8.11",
+    "react-window-infinite-loader": "^1.0.10",
+    "sonner": "^2.0.1",
     "stripe": "^17.6.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
